<resources>
    <string name="app_name">Telabatik</string>

    <!--content deskription home-->
    <string name="toptoolbar_home">toptoolbar home</string>
    <string name="profile_button">Open Profile</string>

    <string name="title_home">Awal</string>
    <string name="title_scan">Scan</string>
    <string name="title_reference">Referensi</string>
    <string name="title_setting">Pengaturan</string>
    <string name="result">Hasil</string>

    <!--Home String-->
    <string name="telabatik">Telabatik</string>
    <string name="home_hello">Halo, John Doe</string>
    <string name="home_hello_name">Halo, %1$s</string>
    <string name="home_welcome">Selamat datang!</string>
    <string name="home_history_time">history time</string>
    <string name="home_history_heading">Histori</string>
    <string name="home_otd_heading">Batik of the Day</string>
    <string name="home_recommendation_heading">Anda mungkin suka</string>
    <string name="home_info_heading">Info Batik</string>

    <string name="img_alt_batik">Batik Image</string>

    <!--result String/halaman result-->
    <string name="scan_scaning">Scan</string>
    <string name="detail_name_placeholder">Batik XYZ</string>
    <string name="detail_subtitle_placeholder">Batik dari Indonesia</string>
    <string name="result_favorite">Favorite</string>
    <string name="detail_description_placeholder"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in odio non sapien tempor varius. Nunc ac vestibulum enim, a sagittis massa. Integer ultrices imperdiet ex ut dictum. Vivamus tincidunt vel risus ut fermentum. Pellentesque eget faucibus neque, vitae bibendum nibh. Vivamus sed justo a arcu aliquam ultrices sed pellentesque dolor. Donec aliquam condimentum justo vulputate ultricies. Curabitur at dolor sit amet mauris elementum porta ac in eros. Curabitur quis ante pellentesque lacus posuere facilisis id sit amet quam. Donec et ante purus. Nam sed purus et tellus consequat elementum a non sem. Aenean lacinia lectus sodales felis blandit lacinia. Pellentesque leo purus, facilisis vitae finibus sit amet, egestas vel justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="result_learnmore">Pelajari lebih lanjut</string>
    <string name="item_title_placeholder">Batik XYZ</string>
    <string name="item_description_placeholder">Batik from ABC</string>

    <!--content deskripsion result-->
    <string name="back_button">back</string>
    <string name="menu_button">menu</string>
    <string name="top_toolbar">top toolbar</string>


    <!--string referensi-->
    <string name="ref_home_title">Referensi</string>
    <string name="ref_home_products">Produk</string>
    <string name="ref_home_center">Pusat Pembelajaran</string>
    <string name="ref_home_news">Berita</string>
    <string name="ref_home_event">Acara</string>

    <string name="headline">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="hello">Hello World!</string>
    <string name="content_description_more">More</string>
    <string name="more">More</string>
    <string name="login_heading">Masuk</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_email">Email</string>
    <string name="register_register">Daftar</string>
    <string name="register_heading">Daftar</string>
    <string name="settings_logout">Keluar</string>
    <string name="settings_header">Pengaturan</string>
    <string name="batik_info_heading">Info Batik</string>
    <string name="app_tagline">Tradisi bertemu Teknologi</string>
    <string name="batik_origin">Batik dari %1$s</string>
    <string name="batik_info_description_placeholder">Ini adalah batik yang terdaftar di Telabatik. Sejarah dan makna akan tertera di sini.</string>

</resources>