<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_vert_item"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/iv_item_vert_img"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:contentDescription="@string/img_alt_batik"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_placeholder" />

        <LinearLayout
            android:id="@+id/ll_item_vert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tv_item_vert_title"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_title_placeholder" />

            <TextView
                android:id="@+id/tv_item_vert_description"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_description_placeholder" />

        </LinearLayout>

        <!-- Buttons -->

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>