<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_item_horz_item"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:id="@+id/iv_item_horz_img"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/img_alt_batik"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_placeholder" />

            <LinearLayout
                android:id="@+id/ll_item_horz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tv_item_horz_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_title_placeholder" />

                <TextView
                    android:id="@+id/tv_item_horz_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/item_description_placeholder" />

            </LinearLayout>

            <!-- Buttons -->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>