<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_batik_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/learnmore_result_card"
        android:elevation="4dp"
        android:padding="2dp"

        android:layout_marginEnd="16dp" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_learnmore"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Image View -->
            <ImageView
                android:id="@+id/iv_batik_result"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/img_alt_batik"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.cardview.widget.CardView>


        <!-- Text Group -->
        <LinearLayout
            android:id="@+id/ll_batik_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/cv_learnmore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/cv_learnmore"
            app:layout_constraintTop_toTopOf="@id/cv_learnmore"
            app:layout_constraintVertical_bias="0.0">

            <!-- Batik Title -->
            <TextView
                android:id="@+id/tv_batik_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headline"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Batik Description -->
            <TextView
                android:id="@+id/tv_batik_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>